# py_send_message

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  run_app.py  settings.py  utils.py
app/: celery_app.py  celery_tasks.py  database.py  logger_config.py  main.py  redis_client.py  settings.py  tasks.py  utils.py
app/auth/: main.py
app/dao/: base.py
app/mail/: api.py  main.py  schemas.py  settings.py  task.py  tasks.py  utils.py
app/migration/: env.py
app/migration/versions/: 8bf87ee1a720_initial_revision.py  f66d624cdcce_add_outer_id_in_slog.py
app/router/: mail.py  schemas.py  slog.py
app/scripts/: create_local_settings.py
app/slog/: api.py  dao.py  main.py  models.py  query_params.py  request_body.py  schemas.py
auth/: main.py
mail/: main.py  settings.py  types.py  utils.py
router/: mail.py
scripts/: create_local_settings.py
settings/: mail.py  server.py
tests/: conftest.py  test_authorization.py  test_main.py  test_settings.py
