[tool.poetry]
name = "send-message"
version = "0.1.0"
description = ""
authors = ["well <Well.heor@yandex.ru>"]
license = "MIT"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
