[tool.poetry]
name = "send-message"
version = "0.1.0"
description = ""
authors = ["well <Well.heor@yandex.ru>"]
license = "MIT"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.1"
greenlet = "^3.1.1"
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.5"
celery = "^5.5.3"
redis = "^6.2.0"
setuptools = "^80.9.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
